@@ -114,6 +114,7 @@ Bug fixes:
 - PR#6808: the parsing of OCAMLRUNPARAM is too lax
   (Damien Doligez)
 - PR#6874: Inefficient code generated for module function arguments
+- PR#6897: Bad error message for some pattern matching on extensible variants
 
 Features wishes:
 - PR#4714: List.cons
